# druid

./: Cargo.toml
druid/: Cargo.toml
druid-shell/: Cargo.toml
druid-shell/src/platform/mac/: window.rs
druid/src/: core.rs  event.rs  lib.rs  window.rs
druid/src/tests/: harness.rs  helpers.rs  mod.rs
druid/src/widget/: label.rs  switch.rs  textbox.rs
