[workspace]
members = [
    "druid",
    "druid-shell",
    "druid-derive",
    "docs/book_examples",
    "druid/examples/web",
    "druid/examples/hello_web",
]
default-members = [
    "druid",
    "druid-shell",
    "druid-derive",
]

[patch.crates-io]
piet-common = { version = "0.2", features = ["png"], path = "../fontville/piet/piet-common" }
